--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,12 +1,12 @@
 
 .login{
     width: 100%;
-    height: 100vh;
+    height: 700px;
 }
 
     .login_container_left{
         width: 45%;
-        height: 100vh;
+        height: 700px;
         float: left;
         display: flex;
         align-items: center;
@@ -64,7 +64,7 @@
 
     .login_container_right{
         width: 55%;
-        height: 100vh;
+        height: 700px;
         float: right;
         display: flex;
         align-items: center;
@@ -73,6 +73,7 @@
 
         .login_form{
             width: 370px;
+            height: auto;
         }
 
             .login_form h5{
@@ -139,18 +140,20 @@
 
 /* Login responsive */
 @media screen and (max-width: 1000px ){
-    .login_container_left, .login_container_right{
-        width: 100%;
-        float: none;
-        height: 500px;
-    }
+    .login{height: auto;}
 
-        .login_center, .login_form{
-            width: 50%;
+        .login_container_left, .login_container_right{
+            width: 100%;
+            float: none;
         }
-            .login_center h5{
-                text-align: center;
+        .login_container_left{height: 500px;}
+
+            .login_center, .login_form{
+                width: 50%;
             }
+                .login_center h5{
+                    text-align: center;
+                }
 
 }
 
@@ -161,11 +164,28 @@
 }
 
 @media screen and (max-width: 400px ){
-    .login_sup{
-        top: 10px;
-        left: 10px;
-    }
-    .login_center, .login_form{
-        width: 90%;
-    }
+    .login{ overflow-x: hidden;}
+
+        .login_container_left, .login_container_right{
+            height: auto;
+        }
+            .login_sup{
+                top: 0px;
+                left: 0px;
+                position: relative;
+                height: auto;
+                background-color: var(--color-rojo-logo-secundary);
+                border-bottom: 1px solid white;
+            }
+                .login_sup img{
+                    margin-top: 10px;
+                    margin-left: 10px;
+                }
+
+            .login_center, .login_form{
+                width: 90%;
+                margin-top: 5rem;
+            }
+            .login_center{ margin-bottom: 5rem;}
+            .login_form{margin-bottom: 10rem;}
 }
