--- a/src/css/nosotros.css
+++ b/src/css/nosotros.css
@@ -61,8 +61,6 @@
             float: right;
             width: 50%;
             height: 500px;
-
-
         }
 
             .text-nosotros{
@@ -70,7 +68,6 @@
                 height: 370px;
                 float: right;
                 margin-top: 67px;
-
             }
 
                 .text-nosotros h2{
@@ -115,7 +112,7 @@
                     color: #fff;
                     
                 }
-                
+
                     .button-info-nos{
                         border: none!important;
                         cursor: pointer;
@@ -127,11 +124,6 @@
                         width: 100%;
                         background:  var(--color-rojo-logo);
                         text-align: center;
-                    }
-
-                    .button-info-nos:hover{
-                        background-color: var(--color-rojo-logo-secundary);
-                        transition: all 0.5s ease-in-out;
                     }
 
                         .button-info-nos span{
@@ -148,11 +140,12 @@
                             background-color: var(--color-negro-logo);
                             margin-left: 10px;
                         }
-
                         .button-info-nos span:hover{
                             color: var(--color-rojo-logo);
                             background-color: var(--color-blanco-primary);
                         }
+
+                        
                 
 
 /* Seccion Nosotros responsive */
@@ -214,22 +207,25 @@
   
   
     @media screen and (max-width: 820px ){
+    .divborder{ height: auto;}
       .column-left-nos{
           height: 330px;
       }
           .div-imgs{
-              height: 280px;
+            height: 280px;
           }
           .div-imgs #img-nos1{
-              width: 50%;
+            width: 50%;
           }
       
       .column-right-nos{
-          height: 400px;
+          height: auto;
       }
-          .text-nosotros{
-              height: 380px;
-          }
+        .text-nosotros{
+            height: auto;
+            margin-bottom: 50px;
+            margin-top: 10px;
+        }
         
    }
   
@@ -240,44 +236,24 @@
         }
       .text-nosotros{
         width: 100%;
-        margin-top: 20px;
         }
    }
   
    @media screen and (max-width: 480px ){
+      .section-nosotros{
+        height: auto;
+        overflow-x: hidden;
+      }
+  
         .divborder{
             width: 90%;
         }
             .column-left-nos{
-                height: 250px;
+                height: auto;
+    
             }
                 .div-imgs{
+                    margin-top: 40px;
                     height: 230px;
                 }
-            
-            .column-right-nos{
-                height: 450px;
-            }
-                .text-nosotros{
-                    height: 430px;
-                    margin-top: 0px;
-                }
-   }
-  
-   @media screen and (max-width: 370px ){
-      .section-nosotros{
-        height: 1000px;
-      }
-  
-        .divborder{
-            height: 950px;
-  
-        }
-        .column-right-nos{
-            height: 700px;
-  
-        }
-            .text-nosotros{
-                height: 680px;
-            }
    }
