--- a/src/css/about.css
+++ b/src/css/about.css
@@ -13,7 +13,7 @@
     }
 
         .about_container_1{
-            height: 550px ;
+            height: 550px;
         }
 
             .about_text{
@@ -30,46 +30,81 @@
                 .about_text h2, .about_text h3 {
                     margin-bottom: 10px;
                     font-weight: 700;
+                    color: #0e2b3d;
                 }
                 .about_text p {
-                    font-size: 14px;
+                    font-size: 13px;
                     text-align: justify;
                     line-height: 1.5;
                     margin-bottom: 15px;
+                    color: #666;
                 }
 
                 .about_mision, .about_vision{
-                    width: 48%;
+                    width: 100%;
+                    height: 130px;
                     box-shadow: 1px 4px 20px -2px rgb(0 0 0 / 10%);
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     border-radius: 12px;
+                    margin-bottom: 15px;
+                    animation: fadeInUp 4s  ease;
                 }
-
-                .about_mision{
-                    float: left;
-                }
-                .about_vision{
-                    float: right;
-                }
-
-                    .about_objective_center{
-                        margin-right: 13px;
-                        margin-left: 13px;
-                        margin-top: 10px;
+                @keyframes fadeInUp {
+                    0% {
+                        opacity: 0;
+                        -webkit-transform: translateY(20px);
+                        -ms-transform: translateY(20px);
+                        transform: translateY(20px)
                     }
+                    100% {
+                        opacity: 1;
+                        -webkit-transform: translateY(0);
+                        -ms-transform: translateY(0);
+                        transform: translateY(0)
+                    }
+                }
+
+                    .about_objective{
+                        width: 95%;
+                        height: auto;
+                    }
+
+                        .icon_objective{
+                            width: 8%;
+                            height: 110px;
+                            float: left;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                        }
+                            .icon_objective .fa-bullseye{ font-size: 20px; color: var(--color-rojo-logo); }
+                            .icon_objective .fa-bullseye:hover{ color: #0e2b3d; }
+
+                        .about_mision_text, .about_vision_text{
+                            width: 90%;
+                            height: 110px;
+                            float: right;
+                        }
 
 
             .about_img{
                 width: 40%;
                 height: auto;
                 float: right;
+                animation: fadeInImg 4s ease;
+            }
+
+            @keyframes fadeInImg {
+                from { opacity: 0; transform: scale3d(0.90, 0.90, 1); }
+                to { opacity: 1; transform: scale3d(1, 1, 1); }
             }
 
                 .about_img img{
                     width: 100%;
                     height: 450px;
+                    border-radius: 8px;
                 }
 
         
@@ -79,15 +114,19 @@
             justify-content: center;
         }
         .about_container_2{
-            height: 150px;
+            height: 170px;
             background-color: rgba(211, 211, 211, 0.342);
         }
 
             .about_funfact{
                 display: flex;
-                height: 120px;
+                height: auto;
                 width: 100%;
             }
+
+            .about_funfact h3{ font-size: 14px; color: #0e2b3d; }
+            .about_funfact p{ font-size: 14px; color: #666;}
+
 
                 .about_funfact_block{
                     width: 25%;
@@ -119,6 +158,15 @@
 
 
 /* Seccion About Responsive */
+@media screen and (max-width: 1210px ){
+    .about_mision, .about_vision{
+        height: 150px;
+    }
+        .icon_objective, .about_mision_text, .about_vision_text{
+            height: 120px;
+        }
+}
+
 @media screen and (max-width: 1150px ){
     .about, .about_container{
         height: auto;
@@ -126,15 +174,14 @@
         .about_container_1{
             height: 950px ;
             margin-top: 30px;
+            margin-bottom: 2rem;
         }
 
             .about_text, .about_img{
                 width: 100%;
+                height: auto;
                 float: none;
-            }
-            .about_text {
-                height: 370px;
-                margin-bottom: 1rem;
+                margin-bottom: 2rem;
             }
 
             .about_img{
@@ -160,11 +207,6 @@
     }
 }
 
-@media screen and (max-width: 710px ){
-    .about_text {
-        height: 450px;
-    }
-}
 
 @media screen and (max-width: 630px ){
     .about_video iframe{
@@ -174,22 +216,11 @@
 
 @media screen and (max-width: 530px ){
     .about_container_1{
-        height: 1100px;
+        height: auto;
     }
-
-        .about_text{
-            height: 550px;
-            margin-bottom: 0;
-        }
-            .about_mision, .about_vision{
-                width: 100%;
-                float: none;
-            }
-
             .about_img img{
                 width: 90%;
             }
-
 
             .about_funfact .fa-users, .about_funfact .fa-tools, .about_funfact .fa-trophy,.about_funfact .fa-medal{
                 font-size: 35px;
@@ -215,22 +246,16 @@
 }
 
 
-@media screen and (max-width: 400px ){
-    .about_container_1{
-        height: 1200px;
+@media screen and (max-width: 450px ){
+    .about_mision, .about_vision{
+        height: auto;
     }
-
-        .about_text{
+        .about_mision_text, .about_vision_text{
             height: auto;
         }
-
-        .about_img{
-            margin-top: 20px;
+        .about_img img{
+            width: 100%;
         }
-
-            .about_img img{
-                width: 100%;
-            }
 
 
     .about_container_2{
@@ -254,12 +279,4 @@
             }
 
 }
-
-@media screen and (max-width: 300px ){
-    .about_container_1{
-        height: auto;
-    }
-}
-
-
 
