--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,4 @@
 
-
 .about{
     height: 1300px;
     width: 100%;
@@ -16,7 +15,7 @@
             height: 550px;
         }
 
-            .about_text{
+            .about_container_left{
                 width: 54%;
                 height: 550px;
                 float: left;
@@ -27,12 +26,12 @@
                     font-weight: 700;
                     color: var(--color-rojo-logo);
                 }
-                .about_text h2, .about_text h3 {
+                .about_container_left h2, .about_container_left h3 {
                     margin-bottom: 10px;
                     font-weight: 700;
                     color: #0e2b3d;
                 }
-                .about_text p {
+                .about_container_left p {
                     font-size: 13px;
                     text-align: justify;
                     line-height: 1.5;
@@ -82,14 +81,14 @@
                             .icon_objective .fa-bullseye{ font-size: 20px; color: var(--color-rojo-logo); }
                             .icon_objective .fa-bullseye:hover{ color: #0e2b3d; }
 
-                        .about_mision_text, .about_vision_text{
+                        .about_objective_text{
                             width: 90%;
                             height: 110px;
                             float: right;
                         }
 
 
-            .about_img{
+            .about_container_right{
                 width: 40%;
                 height: auto;
                 float: right;
@@ -101,7 +100,7 @@
                 to { opacity: 1; transform: scale3d(1, 1, 1); }
             }
 
-                .about_img img{
+                .about_container_right img{
                     width: 100%;
                     height: 450px;
                     border-radius: 8px;
@@ -124,10 +123,6 @@
                 width: 100%;
             }
 
-            .about_funfact h3{ font-size: 14px; color: #0e2b3d; }
-            .about_funfact p{ font-size: 14px; color: #666;}
-
-
                 .about_funfact_block{
                     width: 25%;
                     text-align: center;
@@ -141,10 +136,11 @@
                             font-size: 45px;
                             color:  var(--color-rojo-logo);
                         }
-                        .counter{
-                            font-size: 30px;
-                        }
-            
+
+                        .about_funfact_text h3{ font-size: 14px; color: #0e2b3d; }
+                        .about_funfact_text p{ font-size: 14px; color: #666;}
+
+                        .counter{ font-size: 30px; }
 
         .about_container_3{
             height: 500px;
@@ -152,131 +148,130 @@
 
             .about_video{
                 height: 315px;
-                width: 100%;
-                text-align: center;
+                width: 80%;
+                background-image: url('../img/img_autopista.jpg');
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center center;
+                border-radius: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
+                .video_btn_border1{ width: 45px; height: 45px; }
+                .video_btn_border2{ width: 53px; height: 53px; }
+                .video_btn_border1, .video_btn_border2{
+                    position: absolute;
+                    border-radius: 60px;
+                    background-color: var(--color-rojo-logo);
+                    animation: border_animation 3s linear 0s infinite;
+                }
+                @keyframes border_animation {
+                    0% {
+                        -webkit-transform: scale(1);
+                        transform: scale(1);
+                        opacity: 0;
+                    }
+                    20% {
+                        -webkit-transform: scale(1.24);
+                        transform: scale(1.24);
+                        opacity: 1;
+                    }
+                    100% {
+                        -webkit-transform: scale(2.1);
+                        transform: scale(2.1);
+                        opacity: 0;
+                    }
+                }
+
+                .about_video_icon{
+                    text-align: center;
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 100%;
+                    background-color: var(--color-rojo-logo);
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    cursor: pointer;
+                    z-index: 1;
+                    text-decoration: none;
+                }
+
+                    .about_video_icon .fa-play{
+                        color: #fff;
+                        text-rendering: auto;
+                    }
 
 
 /* Seccion About Responsive */
 @media screen and (max-width: 1210px ){
-    .about_mision, .about_vision{
-        height: 150px;
-    }
-        .icon_objective, .about_mision_text, .about_vision_text{
-            height: 120px;
+    .about{ overflow-x: hidden; }
+        .about_mision, .about_vision{
+            height: 150px;
         }
+            .icon_objective, .about_objective_text{
+                height: 120px;
+            }
 }
 
 @media screen and (max-width: 1150px ){
-    .about, .about_container{
+    .about, .about_container, .about_container_1{
         height: auto;
     }
         .about_container_1{
-            height: 950px ;
             margin-top: 30px;
-            margin-bottom: 2rem;
+            margin-bottom: 4rem;
         }
 
-            .about_text, .about_img{
+            .about_container_left, .about_container_right{
                 width: 100%;
                 height: auto;
                 float: none;
                 margin-bottom: 2rem;
             }
 
-            .about_img{
-                text-align: center;
-            }
-                .about_img img{
-                    width: auto;
-                }
+            .about_container_right{ text-align: center; }
+                .about_container_right img{  width: auto; }
 }
 
 
 @media screen and (max-width: 940px ){
-    .about_container{
-        margin-left: 0px;
-        margin-right: 0px;
-        width: 80%;
-    }
+    .about_container{ margin-left: 0px; margin-right: 0px; width: 80%; }
 }
 
 @media screen and (max-width: 800px ){
-    .about_container{
-        width: 90%;
-    }
+    .about_container{  width: 90%; }
 }
-
 
 @media screen and (max-width: 630px ){
-    .about_video iframe{
-        width: 90%;
-    }
+    .about_funfact .fa-users, .about_funfact .fa-tools, .about_funfact .fa-trophy,.about_funfact .fa-medal{
+        font-size: 35px;  }
+    .counter{ font-size: 20px; }
+    .about_video { width: 100%; }
 }
-
-@media screen and (max-width: 530px ){
-    .about_container_1{
-        height: auto;
-    }
-            .about_img img{
-                width: 90%;
-            }
-
-            .about_funfact .fa-users, .about_funfact .fa-tools, .about_funfact .fa-trophy,.about_funfact .fa-medal{
-                font-size: 35px;
-            }
-            .counter{
-                font-size: 20px;
-            }
-        
-
-
-    .about_container_3{
-        height: 300px;
-    }
-
-        .about_video{
-            height: auto;
-        }
-            .about_video iframe{
-                width: auto;
-                height: auto;
-            }
-
-}
-
 
 @media screen and (max-width: 450px ){
-    .about_mision, .about_vision{
-        height: auto;
-    }
-        .about_mision_text, .about_vision_text{
-            height: auto;
-        }
-        .about_img img{
-            width: 100%;
-        }
+    .about_mision, .about_vision{ height: auto; }
+        .about_objective{ height: auto; margin-top: 13px; margin-right: 13px; margin-left: 13px;
+          display: flex; align-items: center; justify-content: center; }
+            .icon_objective{ height: auto; margin-right: 13px;}
+            .about_objective_text{ height: auto;}
 
+    .about_container_right img{ width: 100%; }
 
-    .about_container_2{
-        height: auto;
-    }
+    .about_container_2{ height: auto; }
         .about_funfact{
             display: block;
             height: auto;
+            margin-top: 2rem;
         }
             .about_funfact_block{
                 width: 100%;
                 height: auto;
-                margin-bottom: 1rem;
+                margin-bottom: 2rem;
             }
-                .counter p{
-                    font-size: 10px;
-                }
-    
-            .about_video iframe{
-                width: 100%;
-            }
+                .counter p{ font-size: 10px; }
 
 }
 
