--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,4 +1,8 @@
 
+body.active_video{
+    overflow-y: hidden;
+}
+
 .about{
     height: 1300px;
     width: 100%;
@@ -149,59 +153,102 @@
             .about_video{
                 height: 315px;
                 width: 80%;
-                background-image: url('../img/img_autopista.jpg');
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center center;
-                border-radius: 8px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
             }
-                .video_btn_border1{ width: 45px; height: 45px; }
-                .video_btn_border2{ width: 53px; height: 53px; }
-                .video_btn_border1, .video_btn_border2{
-                    position: absolute;
-                    border-radius: 60px;
-                    background-color: var(--color-rojo-logo);
-                    animation: border_animation 3s linear 0s infinite;
-                }
-                @keyframes border_animation {
-                    0% {
-                        -webkit-transform: scale(1);
-                        transform: scale(1);
-                        opacity: 0;
-                    }
-                    20% {
-                        -webkit-transform: scale(1.24);
-                        transform: scale(1.24);
-                        opacity: 1;
-                    }
-                    100% {
-                        -webkit-transform: scale(2.1);
-                        transform: scale(2.1);
-                        opacity: 0;
-                    }
-                }
 
-                .about_video_icon{
-                    text-align: center;
-                    width: 60px;
-                    height: 60px;
-                    border-radius: 100%;
-                    background-color: var(--color-rojo-logo);
+                .about_content1{
+                    width: 100%;
+                    height: 100%;
+                    background-image: url('../img/img_autopista.jpg');
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    border-radius: 8px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    cursor: pointer;
-                    z-index: 1;
-                    text-decoration: none;
                 }
 
-                    .about_video_icon .fa-play{
-                        color: #fff;
-                        text-rendering: auto;
+                .about_content2{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: fixed;
+                    z-index: 999;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                    background-color: rgba(0, 0, 0, 0.75);
+                    width: 100%;
+                    height: 100%;
+                    min-height: 100vh;
+                }
+                    .about_content2_container{
+                        width: 560px;
+                        height: 400px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        position: relative;
                     }
+                        .about_btnclose{
+                            color: #ccc;
+                            border: none;
+                            cursor: pointer;
+                            background-color: transparent;
+                            font-family: monospace;
+                            font-size: 2.5em;
+                            position: absolute;
+                            top: 5px;
+                            right: 0px;
+                        }
+                        .about_btnclose:hover{
+                            color: var(--color-rojo-logo-trans);
+                        }
+
+                    .video_btn_border1{ width: 45px; height: 45px; }
+                    .video_btn_border2{ width: 53px; height: 53px; }
+                    .video_btn_border1, .video_btn_border2{
+                        position: absolute;
+                        border-radius: 60px;
+                        background-color: var(--color-rojo-logo);
+                        animation: border_animation 3s linear 0s infinite;
+                    }
+                    @keyframes border_animation {
+                        0% {
+                            -webkit-transform: scale(1);
+                            transform: scale(1);
+                            opacity: 0;
+                        }
+                        20% {
+                            -webkit-transform: scale(1.24);
+                            transform: scale(1.24);
+                            opacity: 1;
+                        }
+                        100% {
+                            -webkit-transform: scale(2.1);
+                            transform: scale(2.1);
+                            opacity: 0;
+                        }
+                    }
+
+                    .about_video_icon{
+                        text-align: center;
+                        width: 60px;
+                        height: 60px;
+                        border-radius: 100%;
+                        background-color: var(--color-rojo-logo);
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        cursor: pointer;
+                        z-index: 1;
+                        text-decoration: none;
+                    }
+
+                        .about_video_icon .fa-play{
+                            color: #fff;
+                            text-rendering: auto;
+                        }
 
 
 /* Seccion About Responsive */
@@ -249,6 +296,7 @@
         font-size: 35px;  }
     .counter{ font-size: 20px; }
     .about_video { width: 100%; }
+        .about_content2_container, .about_content2_container iframe{ width: 100%;}
 }
 
 @media screen and (max-width: 450px ){
@@ -272,6 +320,13 @@
                 margin-bottom: 2rem;
             }
                 .counter p{ font-size: 10px; }
+            .about_content2_container{height: 250px; } 
+                .about_content2_container iframe{ height: 180px;}
+                .about_btnclose{top: 0px;}
+}
 
+@media screen and (max-width: 300px ){
+    .about_content2_container iframe{ height: auto;}
+    .about_btnclose{top: 15px;}
 }
 
